--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -11,7 +11,9 @@ COPY ./requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 # 
-COPY ./app /app
+COPY . /app
+
+# CMD ["ls"]
 
 # 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
