added function to convert dag to dagflow

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -13,7 +13,9 @@ RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 # 
 COPY . /app
 
+EXPOSE 8000
+
 # CMD ["ls"]
 
 # 
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
