--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
     "react-icons": "^4.8.0",
     "react-toastify": "^9.1.2",
     "reactflow": "^11.6.1",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
