--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,7 +8,8 @@ WORKDIR /app
 COPY ./requirements.txt /app/requirements.txt
 
 # 
-RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
+RUN pip install --upgrade -r /app/requirements.txt
+# RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
 # 
 COPY . /app
