--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,7 @@
-apache-airflow==2.1.4
 fastapi
 uvicorn
 python-multipart
 pymongo==4.3.3
 motor==3.1.2
+# apache-airflow[google]==2.5.3
+# apache-airflow-providers-google
