--- a/dockerfile-airflow
+++ b/dockerfile-airflow
@@ -6,5 +6,5 @@ FROM apache/airflow:${AIRFLOW_VERSION}-python${PYTHON_VERSION}
 RUN echo "$(echo $PYTHON_VERSION | cut -d '.' -f 1,2)" > version.txt
 
 RUN VERSION_MAJOR_MINOR=$(cat version.txt) \
-    && pip install "apache-airflow[postgres,google]==${AIRFLOW_VERSION}" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${VERSION_MAJOR_MINOR}.txt"
+    && pip install "apache-airflow[postgres,google]==${AIRFLOW_VERSION}" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-$VERSION_MAJOR_MINOR.txt"
 RUN pip install plyvel
