removed dependenies file

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,22 +1,20 @@
-# 
-# FROM python:3.11.2
-FROM python:3.10
+ARG CUSTOM_PYTHON_VERSION
+ARG AIRFLOW_VERSION
 
-# 
+FROM python:${CUSTOM_PYTHON_VERSION}
 WORKDIR /app
 
-# 
 COPY ./requirements.txt /app/requirements.txt
 
-# 
 RUN pip install --upgrade -r /app/requirements.txt
-# RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
-COPY ./airflow_dependencies.sh /app/airflow_dependencies.sh
 
-RUN sh /app/airflow_dependencies.sh
+RUN echo "AIRFLOW_VERSION=${AIRFLOW_VERSION}"
+RUN echo "CUSTOM_PYTHON_VERSION=${CUSTOM_PYTHON_VERSION}"
 
-# 
+# RUN pip install "apache-airflow[postgres,google]==${AIRFLOW_VERSION}" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${CUSTOM_PYTHON_VERSION}.txt"
+# RUN pip install plyvel
+
 COPY . /app
 
 EXPOSE 8000
