--- a/docker-compose-airflow.yml
+++ b/docker-compose-airflow.yml
@@ -54,6 +54,9 @@ x-airflow-common:
   build:
     context: .
     dockerfile: dockerfile-airflow
+    args:
+      - AIRFLOW_VERSION=${AIRFLOW_VERSION}
+      - PYTHON_VERSION=${PYTHON_VERSION}
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
@@ -66,6 +69,7 @@ x-airflow-common:
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
+
     # yamllint disable rule:line-length
     # Use simple http server on scheduler for health checks
     # See https://airflow.apache.org/docs/apache-airflow/stable/administration-and-deployment/logging-monitoring/check-health.html#scheduler-health-check-server
