testng docker file

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,19 +1,23 @@
 ARG CUSTOM_PYTHON_VERSION
-ARG AIRFLOW_VERSION
-
 FROM python:${CUSTOM_PYTHON_VERSION}
+
+ARG AIRFLOW_VERSION
+ARG PYTHON_VERSION
+RUN echo ${AIRFLOW_VERSION} ${PYTHON_VERSION}
+RUN echo "$(echo $PYTHON_VERSION | cut -d '.' -f 1,2)" > version
+
+RUN VERSION_MAJOR_MINOR=$(cat version) \
+    && echo "https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${VERSION_MAJOR_MINOR}.txt"
+
+
+# RUN pip install "apache-airflow[postgres,google]==${AIRFLOW_VERSION}" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-$(cat version.txt).txt"
+# RUN pip install plyvel
+
 WORKDIR /app
 
 COPY ./requirements.txt /app/requirements.txt
 
-RUN pip install --upgrade -r /app/requirements.txt
-
-
-RUN echo "AIRFLOW_VERSION=${AIRFLOW_VERSION}"
-RUN echo "CUSTOM_PYTHON_VERSION=${CUSTOM_PYTHON_VERSION}"
-
-# RUN pip install "apache-airflow[postgres,google]==${AIRFLOW_VERSION}" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-${AIRFLOW_VERSION}/constraints-${CUSTOM_PYTHON_VERSION}.txt"
-# RUN pip install plyvel
+RUN pip install -r /app/requirements.txt
 
 COPY . /app
 
