--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,6 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
 .wslenv
 env/
@@ -218,3 +217,4 @@ test.py
 generated_dag.py
 mongodb_data
 airflow
+.env/
