--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       args:
         - AIRFLOW_VERSION=${AIRFLOW_VERSION}
         - CUSTOM_PYTHON_VERSION=${PYTHON_VERSION}
-    command: uvicorn main:app --host 0.0.00 --port 8000 --reload
+    command: uvicorn main:app --host 0.0.00 --port 8000
     volumes:
       - ${AIRFLOW_PROJ_DIR}/dags:/dags
       # - /home/jegath/Documents/docker-airflow-2.1.4/dags:/dags
